--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,21 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Binaries
+*__debug_*
+
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # Go workspace file
 go.work
+
+# IDEs directories
+.idea
+.vscode
+
+# Finder
+**/.DS_Store
+
+# Reports
+.reports/
