--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
-*.exe
 *.exe~
 *.dll
 *.so
@@ -32,3 +31,6 @@ go.work
 
 # Reports
 .reports/
+
+# database
+*.db
